feat
loading screen for going to /warz and to /spawn