@@ -2,7 +2,8 @@ package me.Jared.Commands;
 
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.URL;
+import java.io.InputStream;
+import java.net.URI;
 
 import javax.imageio.ImageIO;
 
@@ -14,17 +15,30 @@ import org.bukkit.map.MapView;
 
 public class CustomMapRenderer extends MapRenderer
 {
-
 	@Override
 	public void render(MapView map, MapCanvas canvas, Player player)
 	{
 		try
 		{
-			URL url = new URL("https://i.imgur.com/xaWUSlI.png");
-			BufferedImage image = ImageIO.read(url);
-			canvas.drawImage(0, 0, MapPalette.resizeImage(image));
+			URI uri = new URI("https://i.imgur.com/xaWUSlI.png");
+			try(InputStream inputStream = uri.toURL().openStream())
+			{
+				BufferedImage image = ImageIO.read(inputStream);
+				if(image != null)
+				{
+					canvas.drawImage(0, 0, MapPalette.resizeImage(image));
+				} else
+				{
+					System.err.println("Failed to load image: ImageIO.read returned null");
+				}
+			}
 		} catch(IOException e)
 		{
+			System.err.println("I/O error while loading image: " + e.getMessage());
+			e.printStackTrace();
+		} catch(Exception e)
+		{
+			System.err.println("Unexpected error: " + e.getMessage());
 			e.printStackTrace();
 		}
 	}
